--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,12 @@
   "description": "Sistema completo de gerenciamento para empresas",
   "icons": [
     {
+      "src": "favicon.svg",
+      "sizes": "any",
+      "type": "image/svg+xml",
+      "purpose": "any"
+    },
+    {
       "src": "favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
